PortalPackage/ Enrollment Rx Core/objects/Enrollment_Rx_Configuration__c.object
<CustomObject>
    <description>This is the object that is used to configure the Enrollment Rx system. It should only be accessed by system administrators.</description>
    <fields>
        <fullName>Advisor_Goal_10_Status__c</fullName>
        <description>The name of the Enrollment Opportunity status that, when an EO moves into or past this status, gives the advisor credit against Advisor Goals. The label of the Advisor Goal field &quot;Goal_10&quot; should be changed to reflect this status.</description>
        <inlineHelpText>The name of the Enrollment Opportunity status that, when an EO moves into or past this status, gives the advisor credit against Advisor Goals. The label of the Advisor Goal field &quot;Goal_10&quot; should be changed to reflect this status.</inlineHelpText>
        <label>Advisor Goal 10 Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisor_Goal_11_Status__c</fullName>
        <description>The name of the Enrollment Opportunity status that, when an EO moves into or past this status, gives the advisor credit against Advisor Goals. The label of the Advisor Goal field &quot;Goal_11&quot; should be changed to reflect this status.</description>
        <inlineHelpText>The name of the Enrollment Opportunity status that, when an EO moves into or past this status, gives the advisor credit against Advisor Goals. The label of the Advisor Goal field &quot;Goal_11&quot; should be changed to reflect this status.</inlineHelpText>
        <label>Advisor Goal 11 Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisor_Goal_12_Status__c</fullName>
        <description>The name of the Enrollment Opportunity status that, when an EO moves into or past this status, gives the advisor credit against Advisor Goals. The label of the Advisor Goal field &quot;Goal_12&quot; should be changed to reflect this status.</description>
        <inlineHelpText>The name of the Enrollment Opportunity status that, when an EO moves into or past this status, gives the advisor credit against Advisor Goals. The label of the Advisor Goal field &quot;Goal_12&quot; should be changed to reflect this status.</inlineHelpText>
        <label>Advisor Goal 12 Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_close_Disposition__c</fullName>
        <defaultValue>&quot;Interested in Different Term&quot;</defaultValue>
        <description>What &quot;closed disposition&quot; should old open enrollment opportunities to be moved to when a new EO is auto-opened?</description>
        <inlineHelpText>What &quot;closed disposition&quot; should old open enrollment opportunities to be moved to when a new EO is auto-opened?</inlineHelpText>
        <label>Auto-close Disposition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_close_Enrollment_Opportunities_To__c</fullName>
        <defaultValue>&quot;File Closed&quot;</defaultValue>
        <description>What status should open enrollment opportunities to be moved to when a new EO is auto-opened? This should be an EO status value beginning with &quot;Closed&quot;. Leave blank if you do not wish to auto-close enrollment opportunities.</description>
        <inlineHelpText>What status should open enrollment opportunities to be moved to when a new EO is auto-opened? This should be an EO status value beginning with &quot;Closed&quot;. Leave blank if you do not wish to auto-close enrollment opportunities.</inlineHelpText>
        <label>Auto-close Application To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Documents_at_Status__c</fullName>
        <defaultValue>&quot;New&quot;</defaultValue>
        <description>Determines at which Enrollment Admissions Status required document records are automatically created. If this field is left blank, document records are never created.</description>
        <inlineHelpText>Determines at which Enrollment Admissions Status required document records are automatically created. If this field is left blank, document records are never created.</inlineHelpText>
        <label>Create Documents at Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Portal_User_at_Status__c</fullName>
        <label>Create Portal User at Status</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Default_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The school term that new contacts are assigned to if no term is specified when they are created. It should be the current school term that most are interested in; for instance, if it is currently April 2009, this would most likely be the Fall 2009 term.</description>
        <inlineHelpText>The school term that new contacts are assigned to if no term is specified when they are created. It should be the current school term that most are interested in; for instance, if it is currently April 2009, this would most likely be the Fall 2009 term.</inlineHelpText>
        <label>Current Default Term</label>
        <referenceTo>Term__c</referenceTo>
        <relationshipLabel>Enrollment Rx Configuration</relationshipLabel>
        <relationshipName>Enrollment_Rx_Configuration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Document_Status__c</fullName>
        <defaultValue>&quot;Required&quot;</defaultValue>
        <description>The &quot;Document Status&quot; value that should be used for document records that are auto-created for Enrollment Opportunities. This should match one of the valid picklist values for &quot;Document Status&quot;.</description>
        <inlineHelpText>The &quot;Document Status&quot; value that should be used for document records that are auto-created for Enrollment Opportunities. This should match one of the valid picklist values for &quot;Document Status&quot;.</inlineHelpText>
        <label>New Document Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_of_Interest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program of Interest</label>
        <referenceTo>Program_Offered__c</referenceTo>
        <relationshipLabel>Enrollment Rx Configuration</relationshipLabel>
        <relationshipName>Enrollment_Rx_Configuration</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Enrollment Rx Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Current_Default_Term__c</columns>
        <columns>Program_of_Interest__c</columns>
        <columns>Default__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Enrollment Rx Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enrollment Rx Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>